@@ -1,3 +1,7 @@
+2004-12-03  Richard Sandiford  <rsandifo@redhat.com>
+
+	* gxx-include-dir.m4: New file.
+
 2004-12-02  Richard Sandiford  <rsandifo@redhat.com>
 
 	* gcc-version.m4: New file.
